# neas

./: .gitignore  README.md  analyze_attenuation.py  eval_4_views.py  eval_all_epoch1000.sh  eval_validation_metrics.py  generate_comparison_images.sh  main.py  pyproject.toml  run_experiments_parallel.sh  train.py
config/: foot_50.yaml
config/abdomen_configs/: abdomen_50_1m_freq.yaml  abdomen_50_1m_freq_pr.yaml  abdomen_50_1m_hash.yaml  abdomen_50_1m_hash_pr.yaml  abdomen_50_2m_freq.yaml  abdomen_50_2m_freq_pr.yaml  abdomen_50_2m_hash.yaml  abdomen_50_2m_hash_pr.yaml  abdomen_50_3m_hash.yaml  abdomen_50_4m_hash.yaml
config/attenuation_determine/: abdomen_50_1m_hash.yaml  chest_50_1m_hash.yaml  foot_50_1m_hash.yaml  jaw_50_1m_hash.yaml
config/chest_configs/: chest_50_1m_freq.yaml  chest_50_1m_freq_pr.yaml  chest_50_1m_hash.yaml  chest_50_1m_hash_pr.yaml  chest_50_2m_freq.yaml  chest_50_2m_freq_pr.yaml  chest_50_2m_hash.yaml  chest_50_2m_hash_pr.yaml  chest_50_3m_hash.yaml  chest_50_4m_hash.yaml
config/foot_configs/: foot_50_1m_freq.yaml  foot_50_1m_freq_pr.yaml  foot_50_1m_hash.yaml  foot_50_1m_hash_pr.yaml  foot_50_2m_freq.yaml  foot_50_2m_freq_pr.yaml  foot_50_2m_hash.yaml  foot_50_2m_hash_pr.yaml  foot_50_3m_hash.yaml  foot_50_4m_hash.yaml
config/jaw_configs/: jaw_50_1m_freq.yaml  jaw_50_1m_freq_pr.yaml  jaw_50_1m_hash.yaml  jaw_50_1m_hash_pr.yaml  jaw_50_2m_freq.yaml  jaw_50_2m_freq_pr.yaml  jaw_50_2m_hash.yaml  jaw_50_2m_hash_pr.yaml  (+2 more)
src/: dataset.py  eval_validation_metrics.py  losses.py  mesh.py  metrics.py  mlp.py  test.py  train.py  trainer.py  utils.py
(+39 files in other folders)
