[project]
name = "neas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "matplotlib>=3.0.0",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
    "torchmetrics>=1.8.2",
    "pandas>=2.3.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
